--- a/Data.ipynb
+++ b/Data.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -24,26 +26,12 @@
     "D2_L2 = 'NaN'\n",
     "D3_L2 = 'NaN'\n",
     "D4_L2 = 'NaN'\n",
-    "D5_L2 = 'NaN'\n",
-    "\n",
-    "#Creates Dataframe with Columns\n",
-    "df = pd.DataFrame(columns=['ID','Size', 'Length','Width','Fersenbreite',\n",
-    "                           'D1_L1','D2_L1','D3_L1','D4_L1','D5_L1',\n",
-    "                           'D1_L2','D2_L2','D3_L2','D4_L2','D5_L2'])"
+    "D5_L2 = 'NaN'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -97,17 +85,117 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20090313145121</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20090319102532</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20090323115358</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20090323115459</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fg1_copy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [ID, Size, Length, Width, Fersenbreite, D1_L1, D2_L1, D3_L1, D4_L1, D5_L1, D1_L2, D2_L2, D3_L2, D4_L2, D5_L2]\n",
-       "Index: []"
+       "               ID Size Length Width Fersenbreite D1_L1 D2_L1 D3_L1 D4_L1  \\\n",
+       "0  20090313145121  NaN    NaN   NaN          NaN   NaN   NaN   NaN   NaN   \n",
+       "1  20090319102532  NaN    NaN   NaN          NaN   NaN   NaN   NaN   NaN   \n",
+       "2  20090323115358  NaN    NaN   NaN          NaN   NaN   NaN   NaN   NaN   \n",
+       "3  20090323115459  NaN    NaN   NaN          NaN   NaN   NaN   NaN   NaN   \n",
+       "4        fg1_copy  NaN    NaN   NaN          NaN   NaN   NaN   NaN   NaN   \n",
+       "\n",
+       "  D5_L1 D1_L2 D2_L2 D3_L2 D4_L2 D5_L2  \n",
+       "0   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "1   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4   NaN   NaN   NaN   NaN   NaN   NaN  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,11 +212,16 @@
     "print (listOfAllScans)\n",
     "\n",
     "\n",
+    "#Creates Dataframe with Columns\n",
+    "df = pd.DataFrame(columns=['ID','Size', 'Length','Width','Fersenbreite',\n",
+    "                           'D1_L1','D2_L1','D3_L1','D4_L1','D5_L1',\n",
+    "                           'D1_L2','D2_L2','D3_L2','D4_L2','D5_L2'])\n",
+    "\n",
     "for scan in listOfAllScans:\n",
     "    print(scan)\n",
-    "    #\n",
+    "    ##########here could happen the imageprocessing?\n",
     "    ID = scan.strip(\".JPG\")\n",
-    "    df.append({'ID': ID,'Sizes':Size, 'Length': Length,'Width': Width,'Fersenbreite': Fersenbreite,\n",
+    "    df = df.append({'ID': ID,'Size':Size, 'Length': Length,'Width': Width,'Fersenbreite': Fersenbreite,\n",
     "                           'D1_L1': D1_L1,'D2_L1': D2_L1,'D3_L1': D3_L1,'D4_L1': D4_L1,'D5_L1': D5_L1,\n",
     "                           'D1_L2': D1_L2,'D2_L2': D2_L2,'D3_L2': D3_L2,'D4_L2': D4_L2,'D5_L2': D5_L2},\n",
     "                            ignore_index = True)  #Append data to DataFrame   \n",
