--- a/AnalyseFootScan.ipynb
+++ b/AnalyseFootScan.ipynb
@@ -72,16 +72,16 @@
     "        plt.show()\n",
     "\n",
     "    # extract foot dimensions\n",
-    "    length, width = extractFootDimensions(img_gray_clean, do_visualization)\n",
+    "    length_cm, length_dots, width_cm, width_dots = extractFootDimensions(img_gray_clean, do_visualization)\n",
     "    \n",
-    "    return length, width"
+    "    return length_cm, length_dots, width_cm, width_dots"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -212,14 +212,14 @@
     "    print(\"Foot length is \" + str(round(foot_length_cm,2)) + \" cm.\")\n",
     "    print(\"Foot width is \" + str(round(foot_width_cm,2)) + \" cm.\")\n",
     "    \n",
-    "    return round(foot_length_cm,2), round(foot_width_cm,2)"
+    "    return round(foot_length_cm,2),round(foot_length_dots,2), round(foot_width_cm,2), round(foot_width_dots,2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -255,9 +255,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
