- small bugfixes like NaN for not readable variables instead of the value from the previous footscan
Signed-off-by: Fabian Gaertner <fagaer@gmail.com>

--- a/AnalyseFootScan.ipynb
+++ b/AnalyseFootScan.ipynb
@@ -535,11 +535,11 @@
     "def readBluePointsOfFootScan(image, do_visualization):\n",
     "   \n",
     "    #image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB) #not necessary anymore, because of matplotlib imread\n",
-    "\n",
-    "    plt.subplot(131)\n",
-    "    plt.imshow(image)\n",
-    "    plt.xticks([]), plt.yticks([])  # to hide tick values on X and Y axis\n",
-    "    plt.show()\n",
+    "    if do_visualization:\n",
+    "        plt.subplot(131)\n",
+    "        plt.imshow(image)\n",
+    "        plt.xticks([]), plt.yticks([])  # to hide tick values on X and Y axis\n",
+    "        plt.show()\n",
     "\n",
     "    # list to store points\n",
     "    points_x= []\n",
